dimenticaco il New nella prima tab

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       </div>
       <div class="task">
         <ul>
-            <li><h3>&#9660; Task</h3></li>
+            <li><h3>&#9660; New Task</h3></li>
                 <ul>
                     <li class="spazio"><span class="circle">&#10004;</span>Quarterly Newsletter <span class="editorial">Editorial</span></li>
+                    
                 </ul>
 
                     
